Added the CLI system
